Fix react flow overflows

--- a/apps/workflows/javascript/styles/_react-flow.scss
+++ b/apps/workflows/javascript/styles/_react-flow.scss
@@ -112,4 +112,9 @@
     position: absolute;
     top: calc(100% + 1rem);
   }
+
+  .react-flow__controls {
+    bottom: 1.6rem;
+    left: 1.6rem;
+  }
 }
